vbnc/vbnc/tests/Errors/30455.vb
Module bug
	Function Main () As Integer
		B (1)
	End Function

	Sub B (x As Byte, y As Integer)
	End Sub
End Module
